--- a/src/app/add-dragon/add-dragon.component.html
+++ b/src/app/add-dragon/add-dragon.component.html
@@ -8,8 +8,7 @@
       class="form-control"
       id="name"
       aria-describedby="emailHelp"
-      placeholder="Enter
-       name"
+      placeholder="Enter a name"
     />
     <!-- Permet de valider les règles définies dans le TypeScript -->
     <div *ngIf="name?.invalid && name?.touched" class="alert alert-danger">
@@ -18,13 +17,11 @@
     </div>
   </div>
 
-
   <div class="form-group col-md-12">
     <button
       [disabled]="dragonForm.invalid"
       type="submit"
       class="btn btn-primary"
-
     >
       Add
     </button>
