--- a/src/app/add-dragon/add-dragon.component.html
+++ b/src/app/add-dragon/add-dragon.component.html
@@ -13,7 +13,6 @@
     <!-- Permet de valider les règles définies dans le TypeScript -->
     <div *ngIf="name?.invalid && name?.touched" class="alert alert-danger">
       <div *ngIf="name?.errors?.required">Name is required</div>
-
     </div>
   </div>
 
@@ -27,4 +26,7 @@
     </button>
   </div>
 
+  <div class="form-group row-md-12">
+    <button routerLink="/dragons" class="btn btn-primary">Return</button>
+  </div>
 </form>
