--- a/src/app/update-dragon/update-dragon.component.html
+++ b/src/app/update-dragon/update-dragon.component.html
@@ -1,6 +1,7 @@
 <form [formGroup]="dragonForm" (ngSubmit)="onSubmit()">
   <div class="form-group p-2">
-    <label for="name">Name :</label>
+
+    <label for="name"> New name :</label>
     <input
       name="name"
       formControlName="name"
