--- a/src/app/dragons/dragons.component.html
+++ b/src/app/dragons/dragons.component.html
@@ -25,7 +25,7 @@
           Update
         </button>
       </td>
-      <td>
+      <td routerLink="dragons/{{dragon.id}}">
         {{ dragon.name }}
       </td>
       <td>
