--- a/src/app/delete-dragon/delete-dragon.component.html
+++ b/src/app/delete-dragon/delete-dragon.component.html
@@ -1,1 +1,16 @@
-<p>delete-dragon works!</p>
+<form [formGroup]="dragonForm" (ngSubmit)="onSubmit()">
+  <div class="form-group p-2"> Name : {{ dragon.name }}</div>
+
+
+
+  <div class="form-group col-md-12 m-2">
+    <button
+      type="submit"
+      class="btn btn-primary m-2"
+    >
+      Delete
+    </button>
+
+    <button routerLink="/dragons" class="btn btn-light">Return</button>
+  </div>
+</form>
