--- a/src/app/update-dragon/update-dragon.component.html
+++ b/src/app/update-dragon/update-dragon.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="dragonForm" (ngSubmit)="onSubmit()">
-  <div class="form-group p-2" id="${id}"> Old name : {{ dragon.name }}</div>
+  
+  <div class="form-group p-2" > Old name : {{ dragon.name }}</div>
 
   <div class="form-group p-2">
     <label for="name"> New name :</label>
@@ -10,7 +11,7 @@
       class="form-control"
       id="name"
       aria-describedby="emailHelp"
-      placeholder="Enter a name"
+
     />
     <!-- Permet de valider les règles définies dans le TypeScript -->
     <div *ngIf="name?.invalid && name?.touched" class="alert alert-danger">
