--- a/src/app/dragons/dragons.component.html
+++ b/src/app/dragons/dragons.component.html
@@ -41,7 +41,7 @@
       </td> -->
       </td>
 
-      <td routerLink="{{ knight.id }}">chevalier {{ dragon.knight }}</td>
+      <!--  <td routerLink="{{ knight.id }}">chevalier {{ dragon.knight }}</td> -->
 
       <td>
         <button
